Fix z-index

--- a/src/components/app/header/navbar2/navbar2.css
+++ b/src/components/app/header/navbar2/navbar2.css
@@ -7,7 +7,7 @@
   background-color: #fbfbfb;
   padding: 1rem 0;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-  z-index: 500;
+  z-index: 35;
   transition: all 0.3s;
   transform: translateY(0);
 }
